# MiniSecure

./: CMakeLists.txt  README.md
include/minisec/: config.h  crypto.h  handshake.h  session.h  transport_sim.h
src/: crypto.cpp  handshake.cpp  main.cpp  session.cpp
tests/: test_scenarios.cpp
